--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^4.0.0
   cloud_firestore: ^6.0.0
   flutter_bloc: ^9.1.1
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
